# sndfile-sys

./: .editorconfig  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs  test.rs
