[package]
name = "sndfile-sys"
version = "0.1.0"
authors = ["evpobr <evpobr@gmail.com>"]
description = "Rust FFI bindings to libsndfile."
license = "MIT"
repository = "https://github.com/evpobr/sndfile-sys"
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia::encoding"]
links = "sndfile"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.14"
