[package]
name = "sndfile-sys"
version = "0.1.1"
authors = ["evpobr <evpobr@gmail.com>"]
description = "Rust FFI bindings to libsndfile."
license = "MIT"
repository = "https://github.com/evpobr/sndfile-sys"
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia::encoding"]

[dependencies]
libc = "0.2"
