[package]
name = "sndfile-sys"
version = "0.3.0"
authors = ["evpobr <evpobr@gmail.com>"]
description = "Rust FFI bindings to libsndfile."
license = "MIT"
repository = "https://github.com/evpobr/sndfile-sys"
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia::encoding"]
build = "build.rs"
links = "sndfile"

[dependencies]
libc = "0.2"

[build-dependencies]
vcpkg = "0.2.6"
pkg-config = "0.3.18"
